add share content

--- a/2019/06/ARTS-2019-06-30.md
+++ b/2019/06/ARTS-2019-06-30.md
@@ -5,7 +5,7 @@
 
  [Technique 当高并发遇到限流算法](#technique)
 
- [Share](#share)
+ [Share linux下几种shell的命令区别之处](#share)
 
 
 # Algorithm
@@ -168,7 +168,17 @@ public class MaxConsecutiveOnes {
 
 # Share
 
+#!/usr/bin/env bash #在不同的系统上提供了一些灵活性。
+#!/usr/bin/bash #将对给定的可执行文件系统进行显式控制。
+通过/usr/bin/env运行程序，用户不需要去寻找程序在系统中的位置（因为在不同的系统，命令或程序存放的位置可能不同），只要程序在你的$PATH中；
 
+通过/usr/bin/env运行程序另一个好处是，它会根据你的环境寻找并运行默认的版本，提供灵活性。
+
+不好的地方是，有可能在一个多用户的系统中，别人在你的$PATH中放置了一个bash，可能出现错误。
+
+大部分情况下，/usr/bin/env是优先选择的，因为它提供了灵活性，特别是你想在不同的版本下运行这个脚本；而指定具体位置的方式#!/usr/bin/bash，在某些情况下更安全，因为它限制了代码注入的可能。
+
+可能在一些系统上/usr/bin/bash没有，而/bin/bash则一定存在的。所以/bin/bash是显示指定的优先选择。
 
 
 
