add review part

--- a/2019/07/ARTS-2019-07-07.md
+++ b/2019/07/ARTS-2019-07-07.md
@@ -1,7 +1,7 @@
 
  [Algorithm contains-duplicate ](#algorithm)
 
- [Review](#review)
+ [Review 深度遍历和广度遍历介绍](#review)
 
  [Technique 如何轻松理解二叉树的深度遍历策略](#technique)
 
@@ -42,6 +42,9 @@ public class ContainsDuplicate {
 
 # Review
 
+https://www.techiedelight.com/depth-first-search-dfs-vs-breadth-first-search-bfs/
+
+主要介绍深度遍历和广度遍历的不同
 
 # Technique
 我们知道普通的线性数据结构如链表，数组等，遍历方式单一，都是从头到尾遍历就行，但树这种数据结构却不一样，我们从一个节点出发，下一个节点却有可能遇到多个分支路径，所以为了遍历树的全部节点，我们需要借助一个临时容器，通常是栈这种数据结构，来存储当遇到多个分叉路径时的，存暂时没走的其他路径，等走过的路径遍历完之后，再继续返回到原来没走的路径进行遍历，这一点不论在递归中的遍历还是迭代中的遍历中其实都是一样的，只不过递归方法的栈是隐式的，而我们自己迭代遍历的栈需要显式的声明。
