add technique content

--- a/2019/07/2019-07-14.md
+++ b/2019/07/2019-07-14.md
@@ -1,9 +1,9 @@
 
- [Algorithm](#algorithm)
+ [Algorithm ValidMountainArray](#algorithm)
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique Java反射从放弃到入门](#technique)
 
  [Share](#share)
 
